fixed spacing after titleblock

--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,7 @@ div.titleblock { 	max-width: 100%;
 					width:100%;
 					height:60vw;
 					max-height:60vw;
+					margin-block-end: 1.5vw;
 }
 
 div.centered {		position: absolute; 
@@ -144,4 +145,5 @@ li {	margin: 1vw;}
 /*Images*/	
 img {	width: 100%; 
 		height: 100%; 
-		object-fit: fill;}
+		object-fit: fill;
+		margin-block-end: 60vw;}
